--- a/food_in/src/app/shop-order-owner/shop-order-owner.component.css
+++ b/food_in/src/app/shop-order-owner/shop-order-owner.component.css
@@ -1,11 +1,14 @@
 table {
-  border-collapse: separate; /* Ensure borders are separate */
-  border-spacing: 10px; /* Set the spacing between cells */
+  border-collapse: separate;
+  /* border-spacing: 10px; */
 }
 
 /* Style the table cells with borders */
-td,
-th {
-  border: 1px solid black; /* Add borders to the cells */
-  padding: 10px; /* Optional: Add padding inside the cells */
+td {
+  /* border: 1px solid black; */
+  margin: 10px;
+  padding: 10px;
+}
+.card {
+  display: flex;
 }
