Done signUp and Login

--- a/food_in/src/app/header/header.component.html
+++ b/food_in/src/app/header/header.component.html
@@ -32,6 +32,10 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/shopOrders">Shop-Orders(owner)</a>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/authenticate">Login/Sign Up</a>
+        </li>
       </ul>
     </div>
   </div>
