--- a/food_in/src/app/header/header.component.html
+++ b/food_in/src/app/header/header.component.html
@@ -34,7 +34,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" routerLink="/authenticate">Login/Sign Up</a>
+          <a class="nav-link" routerLink="/login">Login/Sign Up</a>
         </li>
       </ul>
     </div>
