--- a/food_in/src/app/header/header.component.html
+++ b/food_in/src/app/header/header.component.html
@@ -41,6 +41,7 @@
         </li>
       </ul>
     </div>
+    <!-- <a class="navbar-brand">{{ userDetails.username }}</a> -->
   </div>
 </nav>
 <!-- 
