--- a/food_in/src/app/shop-order-owner/shop-order-owner.component.html
+++ b/food_in/src/app/shop-order-owner/shop-order-owner.component.html
@@ -199,6 +199,7 @@
             <th>Product ID</th>
             <th>Name</th>
             <th>Category</th>
+            <th>Quantity</th>
             <th>Price</th>
           </tr>
         </thead>
@@ -207,6 +208,7 @@
             <td>{{ product.productId }}</td>
             <td>{{ product.name }}</td>
             <td>{{ product.category }}</td>
+            <td>{{ product.quantity }}</td>
             <td>{{ product.price }}</td>
           </tr>
         </tbody>
