--- a/food_in/src/app/header/header.component.html
+++ b/food_in/src/app/header/header.component.html
@@ -34,6 +34,10 @@
         </li>
 
         <li class="nav-item">
+          <a class="nav-link" routerLink="/addItems">Add Items(owner)</a>
+        </li>
+
+        <li class="nav-item">
           <a class="nav-link" routerLink="/login">Login/Sign Up</a>
         </li>
         <li class="nav-item">
