--- a/food_in/src/app/header/header.component.html
+++ b/food_in/src/app/header/header.component.html
@@ -36,6 +36,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/addItems">Add Items(owner)</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/editItems">Edit Items(owner)</a>
+        </li>
 
         <li class="nav-item">
           <a class="nav-link" routerLink="/login">Login/Sign Up</a>
