updated cart Page even to delete the cart Item and made some service to add cart button and small changes : )

--- a/food_in/src/app/dashboard/dashboard.component.html
+++ b/food_in/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,4 @@
-<button class="btn btn-success" (click)="getShops()">get shops</button>
-
+<h2>Available Shops</h2>
 <div>
   <div>
     <table border="1">
