--- a/food_in/src/app/shop-items/shop-items.component.html
+++ b/food_in/src/app/shop-items/shop-items.component.html
@@ -42,6 +42,7 @@
           addToCart(
             item.item.productId,
             item.item.price,
+            item.item.name,
             item.item.shopId,
             item.quantity
           )
