--- a/food_in/src/app/shop-order-owner/shop-order-owner.component.html
+++ b/food_in/src/app/shop-order-owner/shop-order-owner.component.html
@@ -212,6 +212,12 @@
             <td>{{ product.price }}</td>
           </tr>
         </tbody>
+        <tr>
+          <td colSpan="4">Total Price</td>
+          <td>
+            <b>RS.{{ order.totalAmount }}</b>
+          </td>
+        </tr>
       </table>
     </div>
   </div>
