--- a/food_in/src/app/dashboard/dashboard.component.css
+++ b/food_in/src/app/dashboard/dashboard.component.css
@@ -1,9 +1,3 @@
-/* .shops {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-column-gap: 10px;
-} */
-
 .shops {
   text-align: center;
 
@@ -18,13 +12,164 @@
 }
 
 table {
-  border-collapse: separate; /* Ensure borders are separate */
-  border-spacing: 10px; /* Set the spacing between cells */
+  border-collapse: separate;
+  border-spacing: 10px;
 }
 
-/* Style the table cells with borders */
 td,
 th {
-  border: 1px solid black; /* Add borders to the cells */
-  padding: 10px; /* Optional: Add padding inside the cells */
+  border: 1px solid black;
+  padding: 10px;
+}
+
+/* for before designing */
+body {
+  margin: 5%;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.header {
+  position: relative;
+  text-align: center;
+}
+
+.header a {
+  margin-right: 50px;
+  text-decoration: none;
+}
+
+.header a:hover {
+  color: red;
+}
+
+.shop {
+  border-radius: 10px;
+  height: 340px;
+  width: 270px;
+  background: #ecc216;
+  overflow: hidden;
+  transition: all 1.2s ease-in-out;
+  cursor: pointer;
+}
+
+.shop-img {
+  width: 100%;
+  min-height: 260px;
+  max-height: 260px;
+  transition: all 0.2s ease-in-out;
+}
+
+.shop-text {
+  color: white;
+  font-size: 20px;
+  position: relative;
+  top: 10px;
+  left: 10px;
+}
+
+.hover-text {
+  color: white;
+  position: relative;
+  opacity: 0;
+  left: 10px;
+  font-size: 20px;
+  transition: all 0.2s ease-in-out;
+}
+
+.lets-go:hover {
+  background: white;
+  color: black;
+}
+
+.shop:hover .hover-text {
+  top: -40px;
+  opacity: 1;
+}
+
+.shop:hover .shop-img {
+  transform: scale(1.1) translate(0, -50px);
+}
+
+.lets-go {
+  border-color: white;
+  border-width: 1px 0px 0px 1px;
+  background: #ecc216;
+  color: white;
+  height: 30px;
+  width: 100px;
+  position: relative;
+  top: -5px;
+  left: 8px;
+  border-radius: 10px;
+  transition: all 0.2s ease-in-out;
+}
+
+.shop:hover .lets-go {
+  top: -55px;
+}
+
+.shops-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 380px;
+  grid-column-gap: 10px;
+  grid-row-gap: 30px;
+  place-items: center;
+}
+
+@media screen and (max-width: 589px) {
+  .shops-list {
+    grid-template-columns: 1fr;
+  }
+
+  .hover-text {
+    opacity: 1;
+    top: -40px;
+  }
+
+  .lets-go {
+    left: 150px;
+    top: -15px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .header a:nth-child(3),
+  .header a:nth-child(4) {
+    position: relative;
+    top: 50px;
+    left: -40%;
+  }
+}
+
+@media screen and (min-width: 590px) and (max-width: 980px) {
+  .shops-list {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .hover-text {
+    opacity: 1;
+    top: -40px;
+  }
+
+  .lets-go {
+    left: 150px;
+    top: -15px;
+  }
+}
+
+@media screen and (min-width: 981px) and (max-width: 1200px) {
+  .shops-list {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .hover-text {
+    opacity: 1;
+    top: -40px;
+  }
+
+  .lets-go {
+    left: 150px;
+    top: -15px;
+  }
 }
